# dbsql-labeling-app-example

./: .env.sample  .gitignore  Dockerfile  README.md  pcconfig.py  pyproject.toml
.devcontainer/: devcontainer.json
dbsql_labeling_app_example/: app.py  crud.py  dbsql_labeling_app_example.py  endpoint_info.py  engine.py  engine_provider.py  loader.py  mode.py  source_loader.py
dbsql_labeling_app_example/assets/: custom.css
dbsql_labeling_app_example/ui/: __init__.py  components.py  external_stylesheets.py
dockerfiles/: Dockerfile.demo  Dockerfile.dev
